@@ -1,3 +1,7 @@
+2002-12-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* slab.cpp: Tmp disable backward modes.
+
 2002-11-27 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* slab.h: Add eps_avg.
